# data-catalog-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: continuous-integration.yaml  formatting.yaml  main-release.yml
alembic/: env.py
alembic/versions/: 0285dbd55d4d_.py  04ba5a452b09_.py  09d4c2c9cf75_migration.py  18530ed4fb4a_.py  19189ea6ec37_migration.py  1a2507fbaa74_.py  2757a7ab3618_adding_created_by_and_updated_by_to_the_.py  432912c71cfe_.py  502b9c4f9683_.py  519e8d0ed055_.py  542679f914a2_.py  5992f61f9fb2_initial_model.py  59ef17d4bf1a_.py  6e12e67cc51c_.py  70b27a2ad4af_.py  70b27a2ad4af_initial_model.py  85585c7481a4_.py  8e882bba4ea4_.py  9805cc044a35_.py  c0696d1d920c_initial_model.py  ca00ef6f04a5_migration.py  d59cadd3f791_.py  daa40b391538_.py  e1ee6cdf0474_.py  f3a87db4583c_migration.py  f5f39a679440_.py  f67a45bdeeb0_.py  fa9b2a0c3eb3_migration.py  ff25720b5686_migration.py  ffe076a00ebf_.py
data_catalog_backend/: __main__.py  config.py  database.py  dependencies.py  exceptions.py
data_catalog_backend/models/: __init__.py  base.py  categories.py  category.py  code.py  code_example.py  example.py  geometry.py  license.py  provider.py  resource.py  resource_category.py  resource_models.py  resource_provider.py  resource_resource.py  resource_types.py  spatial_extent.py  spatial_extent_geometry_relation.py  temporal_extent.py
data_catalog_backend/routes/: admin_routes.py  category_routes.py  (+3 more)
http/: README.md  update_resource.http
tests/: conftest.py
(+47 files in other folders)
