[tool.poetry]
name = "data-catalog-backend"
version = "0.1.0"
description = ""
authors = ["Marie Hessen <marie.hessen@knowit.no>"]
readme = "README.md"
packages = [{include = "data_catalog_backend"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
prometheus-fastapi-instrumentator = "^7.0.2"
geoalchemy2 = "^0.17.1"
psycopg2 = "^2.9.10"
geojson-pydantic = "^1.2.0"
shapely = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
